[UHYU-206] fix: 스크롤바 숨김 스타일 중복 적용 삭제 및 지역 필터 드롭다운의 z-index 값 조정

--- a/src/index.css
+++ b/src/index.css
@@ -72,16 +72,6 @@
   }
 }
 
-/* src/index.css */
-.scrollbar-hidden::-webkit-scrollbar {
-  display: none;
-}
-
-.scrollbar-hidden {
-  -ms-overflow-style: none; /* IE, Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
 .scrollbar-hidden::-webkit-scrollbar {
   display: none;
   width: 0;
